nav is already fixed at the top and also on mobile already have menu

--- a/src/app/core/navigation/navigation.component.css
+++ b/src/app/core/navigation/navigation.component.css
@@ -3,15 +3,19 @@
     display: flex;
     font-size: 1rem;
     width: 100%;
-    position: absolute;
+    position: fixed;
+    top: 0;
     z-index: 1;
 }
-.nav a{
-    
-    color:#a1c759;
-    text-shadow: 1px 1px 2px #a2c5797e, 0 0 1em #a2c57977, 0 0 0.2em #a2c5796a;
+.forBigScreen a{
+    color: #a1c579;
+    text-shadow: 2px 2px #1f1f1f;
+    -webkit-text-stroke-width: 2px;
+  -webkit-text-stroke-color: #c6c6c6;
 }
-
+.nav ul a{
+    font-size: 1.2rem;
+}
 
 /* !upperPart */
 .upperPart{
@@ -84,9 +88,7 @@
 
 /* !Others */
 
-span{
-    color:#969696
-}
+
 
 
 hr{
@@ -100,7 +102,12 @@ hr{
     display: none;
     
 }
-
+.greeting a{
+    
+    padding-left: 1rem;
+    padding-right: 1rem;
+    transform:translateX(10%)
+}
 
 .inBigScreen{
     display: flex;
@@ -169,7 +176,7 @@ svg{
 .hideOnSmall{
     display: block;
 }
-.hamburger a{
+/* .hamburger button{
     padding: 0;
     width: 37px;
     height: 37px;
@@ -197,17 +204,83 @@ svg{
     height:100%;
     background-color:inherit;
     border-radius:2px;
+    transition: 0.4s;
 }
 .hamburger .bar::before{
     top:-4.5px;
 }
 .hamburger .bar::after{
     top:4.5px;
+} */
+.hamburger{
+    position:relative;
+    display: block;
+    width:35px;
+    margin:1em 1em;
+    cursor:pointer;
+    
+    appearance: none;
+    background:none;
+    outline:none;
+    border:none;
+    z-index: 2;
 }
+.hamburger .bar,.hamburger:after,.hamburger:before{
+    content: '';
+    display: block;
+    width:100%;
+    height:5px;
+    background-color:#a1c759;
+    margin: 6px 0;
+    transition: 0.4s;
+}
+.hamburger.is-active:before{
+    transform:rotate(45deg) translate(8px,8px);
+}
+.hamburger.is-active:after{
+    transform:rotate(-45deg) translate(7px,-8px);
+}
+
+.hamburger.is-active .bar{
+    opacity: 0;
+} 
+
 .hamburger{
     display: none;
 }
-@media (max-width:830px){
+
+.mobile-nav{
+    position: fixed;
+    top:0;
+    left:100%;
+    height: 100vh;
+    width: 100%;
+    text-transform: uppercase;
+    background-color: #1f1f1fe9;
+    z-index: 1;
+    transition: 0.5s;
+}
+.mobile-nav ul{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+.mobile-nav ul li a{
+    font-size: 2.5rem;
+    color: #ffffdd;
+}
+.mobile-nav ul li a:hover{
+    color: #ffffdd75;
+
+}
+.mobile-nav.is-active{
+    left:0;
+}
+
+@media (max-width:750px){
     .hideOnSmall{
         display: none;
     }
@@ -271,6 +344,7 @@ button{
     font-variant: small-caps;
     cursor:pointer;
     text-shadow: 0 2px #ffffdd;
+    
 }
 /* NOTE */
 @import url("https://fonts.googleapis.com/css?family=Poppins:100,200,300,400,500,600,700,800,900");
@@ -288,20 +362,24 @@ button{
 
 .content h2 {
 	color: transparent;
-    font-size: 1.5em;
+    font-size: 2em;
     font-family:Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
     left:2em;
+    
 	position: absolute;
 	transform: translate(-50%, -50%);
 }
 
 .content h2:nth-child(1) {
 	color: #ffffdd;
+    
 	-webkit-text-stroke: 2px transparent ;
 }
 
 .content h2:nth-child(2) {
 	color: #a1c579;
+    -webkit-text-stroke: 0.01px;
+    -webkit-text-stroke-color: #1f1f1f;
 	animation: animate 4s ease-in-out infinite;
 }
 
