--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,12 @@
   border-radius: 1em;
   box-shadow: 0 5px solid black;
 }
-
+.card{
+  border-radius: 2em;
+  height: 250px;
+  width: 250px;
+  box-shadow: 25px -16px #1f1f1f16;
+}
 header{
   position:relative;
   display: flex;
